examples/inProgress/C/cil/ocamlutil/bitvector.out
v1 initial       : "00000000_00000000_00000000_00000000_" {} (0)
v1 with bit 4 set: "00001000_00000000_00000000_00000000_" {4} (1)
v1 with 2,3 set  : "00110000_00000000_00000000_00000000_" {2,3} (2)
caught expected error: index out of bounds
caught expected error: index out of bounds
v1 with primes   : "00110101_00000000_00000000_00000000_" {2,3,5,7} (4)
v2 initial       : "00000000_00000000_00000000_00000000_" {} (0)
v2 with primes+1 : "01110101_00010100_01010001_00000100_" {1,2,3,5,7,11,13,17,19,23,29} (11)
v2, primes\{5-9} : "01110000_00010100_01010001_00000100_" {1,2,3,11,13,17,19,23,29} (9)
v1 | v2          : "01110101_00010100_01010001_00000100_" {1,2,3,5,7,11,13,17,19,23,29} (11)
v1 & v2          : "00110000_00000000_00000000_00000000_" {2,3} (2)
~v1              : "11001010_11111111_11111111_11111111_" {0,1,4,6,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31} (28)
~v2              : "10001111_11101011_10101110_11111011_" {0,4,5,6,7,8,9,10,12,14,15,16,18,20,21,22,24,25,26,27,28,30,31} (23)
v3 = v2          : "01110000_00010100_01010001_00000100_00000000_00000000_00000000_00000000_" {1,2,3,11,13,17,19,23,29} (9)
v1 | ~v3         : "10111111_11101011_10101110_11111011_" {0,2,3,4,5,6,7,8,9,10,12,14,15,16,18,20,21,22,24,25,26,27,28,30,31} (25)
v1 & ~v3         : "00000101_00000000_00000000_00000000_" {5,7} (2)
v3 | ~v1         : "11111010_11111111_11111111_11111111_00000000_00000000_00000000_00000000_" {0,1,2,3,4,6,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31} (30)
v3 & ~v1         : "01000000_00010100_01010001_00000100_00000000_00000000_00000000_00000000_" {1,11,13,17,19,23,29} (7)
